# bowling-kata

./: CMakeLists.txt
src/: Bowling.h  Frame.h
tests/unit_tests/: Bowling.cpp  CMakeLists.txt  Frame.cpp
v1/: CMakeLists.txt
v1/src/: CMakeLists.txt
v2/: CMakeLists.txt
v2/src/: Bowling.cpp  Bowling.h  CMakeLists.txt  Frame.cpp  Frame.h  ImmutableFrame.cpp  ImmutableFrame.h  Throw.h
v2/tests/: Bowling.cpp  CMakeLists.txt  Frame.cpp  FrameMocking.cpp  ImmutableFrame.cpp  MockFrame.h  tests.cpp
